kubernetes/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: default
  annotations:
    haproxy.org/server-ssl: "true"
spec:
  tls:
    - hosts:
        - vault.domain.com
      secretName: tls-domain-com
  rules:
    - host: vault.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
